--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "id": "1IAY6MVLIL1LW",
-  "name": "module-platform-users",
-  "description": "Manage your users",
+  "id": "VEY62MWI0YT3",
+  "name": "module-platform-menu",
+  "tplprefix": "menu-",
+  "description": "Manage your menus",
   "dependencies": {
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
